[project]
name = "cursor-common"
version = "0.1.0"
description = "Shared Parcosm utilities (CastedDict, PostgreSQL helpers) for cursor projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
